--- a/index.html
+++ b/index.html
@@ -20,7 +20,26 @@
     </nav>
 
     <main>
-        <h1>Californian Cubing Society</h1>
+        <section class="main-title">
+            <h1>Californian SpeedCube Club</h1>
+            <h2>Cube | Connect | Play</h2>
+            <br>
+        </section>
+
+        <br>
+
+        <section class="about">
+            <div id="section-container">
+                <img src="./images/marko-blazevic-Qasa4DBU3PQ-unsplash.jpg" alt="throwing cube image">
+                <h1>About Us</h1>
+                <h2>Are you into speedcubing? If so, you've come to the right place. Here we host weekly competitions, all around the state. Whether your just a collector, or an avid speedcuber, come play, connect and make like minded friends.</h2>
+            </div>
+            <div id="section-container">
+                <img src="./images/varun-gaba-NN5kORIQeK4-unsplash.jpg" alt="Cube on couch">
+                <h1>Covid Restrictions</h1>
+                <h2>Due to this pandemic, we have resorted to mostly virtual meetups and competitions. Click <a href="#">here</a> for more info.</h2>
+            </div>
+        </section>
     </main>
     
 </body>
