add register title

--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
                 <h2>Due to this pandemic, we have resorted to mostly virtual meetups and competitions. Click <a href="#">here</a> for more info.</h2>
             </div>
         </section>
+
+        <section class="main-title">
+            <h1>Register</h1>
+            <h2>Come register, and join in on the fun!</h2>
+            <br>
+        </section>
+
+        <section class="register">
+            
+        </section>
     </main>
     
 </body>
