change register to weekly challenge, finish weekly challenge portion

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         </section>
 
         <section class="main-title">
-            <h1>Register</h1>
-            <h2>Come register, and join in on the fun!</h2>
+            <h1>Weekly Challenge</h1>
+            <h2>Compete in our daily challenge, and try to get on the leaderboards!</h2>
             <br>
         </section>
-
-        <section class="register">
-            
+        <section class="challenge">
+            <img src="./images/5x5.svg" alt="5x5 logo">
+            <h1>This week's challenge must be completed using only 5x5s. To submit your entry, use <a href="#">#CSCCWeeklyChallenge</a>. Your challenge is to create mosaic art. Those are the only rules. Get creating!</h1>
         </section>
     </main>
     
