--- a/index.html
+++ b/index.html
@@ -46,9 +46,31 @@
             <h2>Compete in our daily challenge, and try to get on the leaderboards!</h2>
             <br>
         </section>
+
         <section class="challenge">
             <img src="./images/5x5.svg" alt="5x5 logo">
             <h1>This week's challenge must be completed using only 5x5s. To submit your entry, use <a href="#">#CSCCWeeklyChallenge</a>. Your challenge is to create mosaic art. Those are the only rules. Get creating!</h1>
+        </section>
+
+        <section class="main-title">
+            <h1>Photos</h1>
+            <h2>View amazing photographs, and see what it's like to join in on our events!</h2>
+            <br>
+        </section>
+
+        <section class="photos">
+            <img src="./images/5c8ff1013504e.image.jpg" alt="man turning 6x6">
+            <img src="./images/Feliks_Zemdegs_at_Swisscubing_Cup_Final_2018.jpg" alt="flex cubing">
+            <img src="./images/group-photo-2015.jpg" alt="group photo">
+            <img src="./images/IMG_5438.jpg" alt="kids with cubing shirts">
+            <img src="./images/Mats_action_website3.jpg" alt="Mats valk cubing">
+            <img src="./images/r0_0_4256_2828_w1200_h678_fmax.jpg" alt="kids smiling">
+        </section>
+        <br>
+        <section class="main-title">
+            <h1>Register</h1>
+            <h2>Register here, and join in on the fun!</h2>
+            <br>
         </section>
     </main>
     
