re-styled photos section

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
         </section>
 
         <section class="photos">
-            <img src="./images/5c8ff1013504e.image.jpg" alt="man turning 6x6">
-            <img src="./images/Feliks_Zemdegs_at_Swisscubing_Cup_Final_2018.jpg" alt="flex cubing">
-            <img src="./images/group-photo-2015.jpg" alt="group photo">
-            <img src="./images/IMG_5438.jpg" alt="kids with cubing shirts">
-            <img src="./images/Mats_action_website3.jpg" alt="Mats valk cubing">
-            <img src="./images/r0_0_4256_2828_w1200_h678_fmax.jpg" alt="kids smiling">
+            <img src="./images/5c8ff1013504e.image.jpg" alt="man turning 6x6" id="photo-one">
+            <img src="./images/Feliks_Zemdegs_at_Swisscubing_Cup_Final_2018.jpg" alt="felix cubing" id="photo-two">
+            <img src="./images/group-photo-2015.jpg" alt="group photo" id="photo-three">
+            <img src="./images/IMG_5438.jpg" alt="kids with cubing shirts" id="photo-four">
+            <img src="./images/r0_0_4256_2828_w1200_h678_fmax.jpg" alt="kids smiling" id="photo-five">
+
         </section>
         <br>
         <section class="main-title">
