--- a/index.html
+++ b/index.html
@@ -67,10 +67,53 @@
 
         </section>
         <br>
-        <section class="main-title">
-            <h1>Register</h1>
-            <h2>Register here, and join in on the fun!</h2>
-            <br>
+        <section>
+            <div class="footer">
+                <div class="heading">
+                  <h2>CSCSS<sup>&trade;</sup></h2>
+                </div>
+                <div class="content">
+                  <div class="social-media">
+                    <h4>Social</h4>
+                    <p>
+                      <a href="https://twitter.com/Sanket46171296"
+                        ><i class="fab fa-twitter"></i> Twitter</a
+                      >
+                    </p>
+                    <p>
+                      <a href="https://github.com/sanketbodke"
+                        ><i class="fab fa-github"></i> Github</a
+                      >
+                    </p>
+                    <p>
+                      <a href="https://www.instagram.com/imsanketbodke/?hl=en"
+                        ><i class="fab fa-instagram"></i> Instagram</a
+                      >
+                    </p>
+                  </div>
+                  <div class="links">
+                    <h4>Quick links</h4>
+                    <p><a href="#">Home</a></p>
+                    <p><a href="#">About</a></p>
+                    <p><a href="#">Blogs</a></p>
+                    <p><a href="#">Contact</a></p>
+                  </div>
+                  <div class="details">
+                    <h4 class="address">Address</h4>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur <br />
+                      adipisicing elit. Cupiditate, qui!
+                    </p>
+                    <h4 class="mail">Email</h4>
+                    <p><a href="#">abcdef@gmail.com</a></p>
+                  </div>
+                </div>
+                <footer>
+                  <hr>
+                  &copy; 2021
+                  <br>
+                </footer>
+              </div>
         </section>
     </main>
     
