fix name typo in footer

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <section>
             <div class="footer">
                 <div class="heading">
-                  <h2>CSCSS<sup>&trade;</sup></h2>
+                  <h2>CSCC<sup>&trade;</sup></h2>
                 </div>
                 <div class="content">
                   <div class="social-media">
