add fake address

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                   <div class="details">
                     <h4 class="address">Address</h4>
                     <p>
-                      Lorem ipsum dolor sit amet consectetur <br />
-                      adipisicing elit. Cupiditate, qui!
+                        4163 State Street <br />
+                        90001
                     </p>
                     <h4 class="mail">Email</h4>
                     <p><a href="#">abcdef@gmail.com</a></p>
